--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+.UFO {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -143,7 +143,7 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
+.FinTechFinder {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -152,7 +152,7 @@ p {
     color: #ffffff;
 }
 
-.social-media-marketing {
+.SF_Housing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -161,29 +161,29 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.UFO img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+.FinTechFinder img {
     max-height: 200px;
 }
 
-.social-media-marketing img {
+.SF_Housing img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+.UFO h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
+.FinTechFinder h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.social-media-marketing h2 {
+SF_Housing h2{
     margin-bottom: 20px;
     font-size: 36px;
 }
